--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,33 @@
-/src/api/credentials.php
-/credentials.json
+# Secret files
+/api/credentials.php
+/datatourisme/credentials.json
+.env
 
-/node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
