--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "mapbox-gl": "^2.14.1",
+    "mapbox-gl-controls": "^2.3.5",
     "pinia": "^2.0.34",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
