--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "events",
   "version": "0.0.0",
   "description": "Ceci est un site web permettant aux utilisateurs de rechercher des événements autour d'eux ou d'en ajouter.",
-  "private": true,
+  "type": "module",
+  "private": false,
   "scripts": {
     "dev": "cp -r api dist/ && vite",
     "dev:host": "cp -r api dist/ && vite --host",
@@ -20,16 +21,14 @@
   },
   "homepage": "https://github.com/ptlc8/events#readme",
   "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
-    "mapbox-gl": "^2.14.1",
-    "mapbox-gl-controls": "^2.3.5",
-    "pinia": "^2.0.34",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "sass": "^1.62.0",
-    "vite": "^4.1.4"
+    "@mapbox-controls/styles": "^3.0.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "mapbox-gl": "^3.8.0",
+    "pinia": "^2.2.8",
+    "sass": "^1.81.0",
+    "vite": "^6.0.1",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   }
 }
