--- a/aggregation/package.json
+++ b/aggregation/package.json
@@ -9,6 +9,7 @@
   "author": "Ambi",
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.4.5",
     "mysql2": "^3.2.1",
     "unzipper": "^0.10.11"
   },
