remplacement des images unsplash

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -18,8 +18,10 @@ RUN echo "<?php \
     define('DB_USER', getenv('DB_USER')); \
     define('DB_PASS', getenv('DB_PASS')); \
     define('DB_NAME', getenv('DB_NAME')); \
+    define('BASE_URL', getenv('BASE_URL')); \
     define('PORTAL_CONNECT_URL', getenv('PORTAL_CONNECT_URL')); \
     define('PORTAL_USER_URL', getenv('PORTAL_USER_URL')); \
+    define('PORTAL_AVATAR_URL', getenv('PORTAL_AVATAR_URL')); \
     define('PORTAL_OVERRIDE_HOST', getenv('PORTAL_OVERRIDE_HOST')); \
     define('SEATGEEK_CLIENT_ID', getenv('SEATGEEK_CLIENT_ID')); \
     define('SEATGEEK_CLIENT_SECRET', getenv('SEATGEEK_CLIENT_SECRET')); \
