--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
       context: .
       args:
         VITE_MAPBOX_ACCESS_TOKEN: ${VITE_MAPBOX_ACCESS_TOKEN?}
-        VITE_BASE_URL: /${BASE_URL:-events}/
+        VITE_BASE_URL: /${BASE_URL:-events}
     ports:
       - 80
     depends_on:
@@ -13,7 +13,10 @@ services:
     labels:
       - webproxy.path=${BASE_URL:-events}
   api:
-    build: api
+    build:
+      context: api
+      args:
+        PHP_ENV: ${PHP_ENV:-production}
     expose:
       - 9000
     environment:
@@ -21,8 +24,10 @@ services:
       DB_USER: user
       DB_PASS: secret
       DB_NAME: events
+      BASE_URL: /${BASE_URL:-events}
       PORTAL_CONNECT_URL: ${PORTAL_CONNECT_URL?}
       PORTAL_USER_URL: ${PORTAL_USER_URL?}
+      PORTAL_AVATAR_URL: ${PORTAL_AVATAR_URL?}
       PORTAL_OVERRIDE_HOST: ${PORTAL_OVERRIDE_HOST:-}
       SEATGEEK_CLIENT_ID: ${SEATGEEK_CLIENT_ID:-}
       SEATGEEK_CLIENT_SECRET: ${SEATGEEK_CLIENT_SECRET:-}
