--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       args:
-        VITE_MAPBOX_ACCESS_TOKEN: ${VITE_MAPBOX_ACCESS_TOKEN?}
+        VITE_MAPBOX_ACCESS_TOKEN: ${MAPBOX_ACCESS_TOKEN?}
         VITE_BASE_URL: /${BASE_URL:-events}
     ports:
       - 80
