--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,7 @@
     "register-service-worker": "^1.7.2",
     "sass": "^1.81.0",
     "vite": "^6.0.1",
+    "vite-plugin-handlebars": "^2.0.0",
     "vite-plugin-pwa": "^0.21.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
