aggregation: utilisation de crond dans le conteneur plutôt que le cron jenkins

--- a/aggregation/Dockerfile
+++ b/aggregation/Dockerfile
@@ -1,6 +1,8 @@
 ARG NODE_VERSION=lts
 FROM node:${NODE_VERSION}-slim
 
+RUN apt update && apt install -y cron curl
+
 WORKDIR /app
 
 # Install dependencies
@@ -8,6 +10,10 @@ COPY package*.json ./
 RUN npm ci --omit=dev
 
 # Copy source code
-COPY *.js ./
+COPY *.js *.sh ./
+COPY providers/ ./providers/
 
-ENTRYPOINT ["npm", "run"]
+# Setup cronjobs
+RUN ./setup-cron.sh
+
+CMD ["bash", "-c", "printenv >> /etc/environment && cron -f -l 7"]
