--- a/compose.yaml
+++ b/compose.yaml
@@ -41,9 +41,10 @@ services:
       DB_USER: user
       DB_PASS: secret
       DB_NAME: events
-      DATATOURISME_GET_URL: ${DATATOURISME_GET_URL:-}
-      OPENAGENDA_KEY: ${OPENAGENDA_KEY:-}
-      EVENTBRITE_TOKEN: ${EVENTBRITE_TOKEN:-}
+      AGGREGATION_WEBHOOK_URL: ${AGGREGATION_WEBHOOK_URL}
+      DATATOURISME_GET_URL: ${DATATOURISME_GET_URL}
+      OPENAGENDA_KEY: ${OPENAGENDA_KEY}
+      EVENTBRITE_TOKEN: ${EVENTBRITE_TOKEN}
     depends_on:
       - database
   database:
