--- a/aggregation/package.json
+++ b/aggregation/package.json
@@ -2,9 +2,10 @@
   "name": "events-aggregation",
   "version": "1.0.0",
   "scripts": {
-    "update": "node .",
-    "datatourisme": "node . DT",
-    "openagenda": "node . OA"
+    "start": "node .",
+    "all": "node .",
+    "datatourisme": "node . datatourisme",
+    "openagenda": "node . openagenda"
   },
   "author": "Ambi",
   "dependencies": {
