--- a/database/mariadb.cnf
+++ b/database/mariadb.cnf
@@ -7,3 +7,5 @@ default-character-set = utf8mb4
 [mysqld]
 character-set-server = utf8mb4
 collation-server = utf8mb4_unicode_ci
+
+innodb_buffer_pool_size = 512M
