--- a/aggregation/package.json
+++ b/aggregation/package.json
@@ -5,13 +5,18 @@
     "start": "node .",
     "all": "node .",
     "datatourisme": "node . datatourisme",
-    "openagenda": "node . openagenda"
+    "openagenda": "node . openagenda",
+    "montreal": "node . montreal"
   },
   "author": "Ambi",
   "dependencies": {
     "axios": "^1.4.0",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.5",
+    "luxon": "^3.7.2",
     "mysql2": "^3.2.1",
+    "node-html-parser": "^7.0.2",
+    "sanitize-html": "^2.17.0",
     "unzipper": "^0.10.11"
   },
   "type": "module"
