--- a/compose.yaml
+++ b/compose.yaml
@@ -55,7 +55,7 @@ services:
       AGGREGATION_WEBHOOK_URL: ${AGGREGATION_WEBHOOK_URL}
       DATATOURISME_GET_URL: ${DATATOURISME_GET_URL}
       OPENAGENDA_KEY: ${OPENAGENDA_KEY}
-      EVENTBRITE_TOKEN: ${EVENTBRITE_TOKEN}
+      MONTREAL_CSV_URL: ${MONTREAL_CSV_URL}
     depends_on:
       - database
     restart: always
