--- a/front/package.json
+++ b/front/package.json
@@ -29,6 +29,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "mapbox-gl": "^3.8.0",
+    "marked": "^17.0.1",
     "pinia": "^2.2.8",
     "register-service-worker": "^1.7.2",
     "sass": "^1.81.0",
